--- a/theme4.html
+++ b/theme4.html
@@ -2,16 +2,182 @@
 <html class="content">
 <head>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  <title>Глава III</title>
+  <title>Глава IV</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1 class="center">Глава III. Линейные уравнения</h1>
+    <h1 class="center">Глава IV Текстовые задачи</h1>
   </header>
   <main>
+    <h4>Решение текстовых задач обычно состоит из четырех этапов:</h4>
+    <p>✓ выбор неизвестных;</p>
+    <p>✓ составление уравнения или системы уравнений;</p>
+    <p>✓ решение полученного уравнения или системы уравнений;</p>
+    <p>✓ отбор решения по смыслу задачи.</p>
+    <h4>Задачи можно условно разбить на следующие типы задач:</h4>
+    <div>
+      <p>1) задачи «на больше - меньше»;</p>
+      <p>2) задачи «на движение»;</p>
+      <p>3) задачи «на проценты и смеси»;</p>
+      <p>4) задачи «на совместную работу»;</p>
+      <p>5) задачи «на зависимости между компонентами арифметических действий»;</p>
+      <p>6) задачи «на пропорции и пропорциональное деление»;</p>
+      <p>7) другие виды задач.</p>
+    </div>
+    <h4 class="center">§1. Задачи на «больше - меньше»</h4>
+    <p class="center"><i>Задачи с решением</i></p>
+    <div>
+      <h4 class="inline">Пример 1.</h4> 
+      <p class="inline">В трех цехах завода работает 2740 человек. Во втором цехе работает на 140 человек больше, чем в первом, а в третьем цехе - в 1,2 раза больше, чем во втором. Сколько человек работает в каждом из цехов?</p>
+      <p><i>Решение.</i></p>
+      <p>Пусть в первом цехе работает х человек. Тогда во втором цехе работает х+140 человек, а в третьем - 1,2(x+140) человек. Общее число рабочих х+х+140+ 1,2(х+ 140), что по условию задачи равно 2740.</p>
+      <p>Решим полученное уравнение:</p>
+      <p><span class="formula">$$\begin{aligned}
+  & x+x+140+1,2(x+140)=2740, \\
+  & 3,2 x+308=2740, \\
+  & 3,2 x=2740-308, \\
+  & 3,2 x=2432 \\
+  & x=2432: 3,2 \\
+  & x=760 .
+  \end{aligned}$$</span>;</p>
+      <p>Следовательно, в первом цехе работает 760 человек. Так как х+140=760+140 = 900, то во втором, цехе работает 900 человек 1,2(х+140) = 1,2*900=1080 - человек работает в третьем цехе.</p>
+      <p>Ответ: 760 человек работает в первом цехе, 900 человек - во втором цехе и в третьем - 1080 человек.</p>
+    </div>
+    <div>
+      <h4 class="inline">Пример 2.</h4> 
+      <p class="inline">На первом участке на 9 кустов смородины больше, чем на втором. Если со второго участка пересадить на первый 3 куста, то на первом участке станет в 1,5 раза больше кустов смородины, чем на втором. Сколько кустов смородины на первом участке?</p>
+      <p><i>Решение:</i></p>
+      <p>Пусть на втором участке было х кустов смородины, тогда на первом участке было х+9 кустов смородины. После того, как со второго участка пересадили на первый 3 куста, на втором стало в 1,5 раза больше кустов смородины, чем на втором. Значит, х+12=1,5(х-3). Решим составленное уравнение:</p>
+      <p><span class="formula">$$\begin{aligned}
+& x+12=1,5 x-4,5 ; \\
+& l, 5 x-x=12+4,5 ; \\
+& 0,5 x=16,5 ; \\
+& x=33.
+\end{aligned}$$</span>;</p>
+      <p>Значит, на втором участке было 33 куста смородины. Так как х+9=33+9=42, то на первом участке было 42 куста. Ответ: 42 куста.</p>
+    </div>
+    <div>
+      <h4 class="inline">Пример 3.</h4> 
+      <p class="inline">На ферме находится 1000 кроликов и кур, у них 3150 ног. Сколько кроликов и сколько кур на ферме?</p>
+      <p><i>Решение:</i></p>
+      <p>Пусть х кроликов и (1000 - х) кур находится на ферме. Тогда у кроликов 4х ног, а у кур 2(1000 - х) ног. По условию у них 3150 ног.</p>
+      <p>Составим и решим уравнение:</p>
+      <p><span class="formula">$$\begin{aligned}
+& 4 x+2(1000-x)=3150 \\
+& 4 x+2000-2 x=3150 \\
+& x=575
+\end{aligned}$$</span>;</p>
+      <p>Следовательно, 575 кроликов находится на ферме.</p>
+      <p>Так как 1000 – х = 1000 – 575 = 425, то на ферме находится 425 кур.</p>
+      <p>Ответ: 575 кроликов, 425 кур.</p>
+    </div>
+    <div>
+      <p class = "center"><i>Решите самостоятельно.</i></p>
+      <p>1. Сумма трех чисел равна 94. Известно, что первое число на 18 меньше второго, а третье число на 4 больше второго. Найдите эти числа.</p>
+      <p>Ответ: 18; 36; 40.</p>
+      <p>2. Возраст отца, дочери и сына вместе составляет 47 лет. Отец старше сына в 5 раз, а сестра моложе брата на 2 года. Сколько лет сыну?</p>
+      <p>Ответ: 7 лет.</p>
+      <p>3. Одна сторона треугольника в два раза больше второй, а третья сторона на 5см меньше второй. Вычислите стороны треугольника, если его периметр 85 см.</p>
+      <p>Ответ: 45 см; 22,5 см; 17,5 см.</p>
+      <p>4. Турист прошел маршрут длиной 110км за три дня. Во второй день он прошел на 5 км меньше, чем в первый, а в третий день 37 - расстояния, пройденного за первые два дня. Сколько километров прошел турист за каждый из трех дней пути?</p>
+      <p>Ответ: 41 км; 36 км; 33 км.</p>
+      <p>5. У Миши в четыре раза больше марок, чем у Андрея. Если Миша отдаст Андрею 8 марок, то у него марок станет вдвое больше.
+Сколько марок у каждого мальчика?</p>
+      <p>Ответ: 48 и 12.</p>
+      <p>6. Чтобы сдать в срок книгу в библиотеку, ученик должен был читать ежедневно по 40 страниц, но он читал в день на 15 страниц меньше и сдал книгу на 6 дней позже срока. За сколько дней ученик должен был прочитать книгу?</p>
+      <p>Ответ: 10 дней.</p>
+      <p>7. Отцу 29 лет, а дочери 5 лет. Через сколько лет отец будет втрое старше дочери?</p>
+      <p>Ответ: через 7 лет.</p>
+      <p>8. В одном баке 46 л машинного масла, в другом 72 л. Из первого бака ежедневно берут по 3л масла, а из второго - по 5л. Через сколько дней во втором баке останется в 1,5 раза больше масла, чем в первом?</p>
+      <p>Ответ: через 6 дней.</p>
+      <p>9. На одном складе было 185т угля, а на другом 237т. Первый склад стал отпускать ежедневно по15т угля, а второй по 18т. Через сколько дней на втором складе угля будет в 1,5 раза больше, чем на первом?</p>
+      <p>Ответ: через 9 дней.</p>
+      <p>10. В один киоск завезли кваса в 1,2 раза больше, чем в другой. Каждый час в первом киоске продавали 90 л кваса, а во втором 80 л. Через 2,5 часа во втором киоске осталось на 65 л кваса меньше, чем в первом. Сколько литров кваса завезли в каждый киоск?</p>
+      <p>Ответ: 450л, 540л.</p>
+    </div>
+    <h4 class = "center">§2 Задачи на движение</h4>
+    <h4>Некоторые указания к задачам на «движение»:</h4>
+    <p>1. Основными компонентами этого типа задач являются:</p>
+    <p>✓ пройденный путь (S);</p>
+    <p>✓ скорость (𝑣);</p>
+    <p>✓ время (t).</p>
+    <p>Зависимость между указанными величинами выражается известными формулами:</p>
+    <p><span class="formula">$$S=\mathrm{v} \cdot t$$</span>,<span class="formula">$$\mathbf{v}=\frac{\mathrm{s}}{\boldsymbol{t}}$$</span>,<span class="formula">$$t=\frac{s}{v}$$</span></p>
+    <p>(Указанные величины должны быть в одной системе единиц, например, если путь в километрах, а время в часах, то скорость в километрах в час).</p>
+    <p>2. Если два каких-либо тела начинают движение одновременно, то в случае, если они встречаются, каждое с момента выхода и до встречи затрачивает, очевидно, одинаковое время. Аналогично обстоит дело и в случае, если одно тело догоняет другое.</p>
+    <p>3. Если же тела выходят в разное время, то до момента встречи из них затрачивает времени больше то, которое вышло раньше.</p>
+    <p>В задачах на движение по реке необходимо помнить следующие формулы:</p>
+    <p><span class="formula">$$\begin{aligned}
+& v_{\text {no теч. }}=v_{\text {собств. }}+v_{\text {meч. }} \\
+& v_{\text {против теч. }}=v_{\text {собств. }}-v_{\text {mеч. }} \text {. } \\
+& v_{\text {собств. }}=\frac{\boldsymbol{v}_{\text {по теч. }+} \boldsymbol{v}_{\text {против теч. }}}{2}
+\end{aligned}$$</span>;</p>
+    <p class = "center"><i>Задачи с решением.</i></p>
+    <h4 class="inline">Пример 1.</h4> 
+    <p class="inline">Катер проходит по течению реки за 5 ч такое же расстояние, как за 6 ч 15 мин против течения. Найдите скорость катера в стоячей воде, если скорость течения реки равна 2,4 км/ч.</p>
+    <p><i>Решение:</i></p>
+    <p>Пусть х км/ч - скорость катера в стоячей воде. Тогда его скорость по течению реки равна х + 2,4(км/ч), а против течения х - 2,4(км/ч). По условию задачи 5(х + 2,4) = 6,25(х - 2,4). Решим составленное уравнение:</p>
+    <p><span class="formula">$$\begin{aligned}
+& 5 x+12=6,25 x-15 \\
+& 1,25 x=27 \\
+& x=21,6
+\end{aligned}$$</span>;</p>
+    <p>Следовательно, скорость катера в стоячей воде равна 21,6км/ч.</p>
+    <p>Ответ: 21,6 км/ч.</p>
+    <h4 class="inline">Пример 2.</h4> 
+    <p class="inline">Велосипедист ехал из М в N по шоссе со скоростью 16км/ч, а возвращался по проселочной дороге, которая была на 6км длиннее, со скоростью 12 км/ч. Сколько километров проехал велосипедист по шоссе и сколько по проселочной дороге, если на весь путь он затратил 4ч?</p>
+    <p><i>Решение:</i></p>
+    <p>Пусть х(км) проехал велосипедист по шоссе и х+6(км) – по проселочной дороге. Тогда<span class="formula">$$t_1=\frac{x}{16} \ ч$$</span>– время, за которое велосипедист проезжает по шоссе;<span class="formula">$$t_2=\frac{x+6}{12} \text { ч }$$</span>– время, за которое велосипедист проезжает проселочную дорогу.</p>
+    <p><span class="formula">$$t_1+t_2=4$$</span>.</p>
+    <p>Составим и решим уравнение:</p>
+    <p>По условию<span class="formula">$$\begin{aligned}
+& \frac{x}{16}+\frac{x+6}{12}=4 \\
+& 3 x+4 x+24=192 \\
+& 7 x=168 ; x=24 .
+\end{aligned}$$</span>;</p>
+    <p>Следовательно, 24км проехал велосипедист по шоссе.</p>
+    <p>Так как х+6 = 24 + 6 = 30(км), то по проселочной дороге он проехал 30км.</p>
+    <p>Ответ: 24 км; 30 км.</p>
+    <h4 class="inline">Пример 3.</h4> 
+    <p class="inline">Два велосипедиста выехали навстречу друг другу из двух поселков, расстояние между которыми 76 км. Через 2 ч они встретились. Какова скорость каждого велосипедиста, если известно, что скорость одного из них на 3 км/ч меньше скорости другого?</p>
+    <p><i>Решение:</i></p>
+    <p>Пусть х (км/ч) - скорость первого велосипедиста, тогда х-3 (км/ч) – скорость второго велосипедиста. По условию 2х км проедет первый велосипедист, а второй проедет 2(х-3) км. Составим и решим уравнение:</p>
+    <p><span class="formula">$$\begin{aligned}
+& 2 x+2(x-3)=76 \\
+& 4 x-6=76 \\
+& x=20,5
+\end{aligned}$$</span>;</p>
+    <p>Следовательно, 20,5 км/ч скорость первого велосипедиста.</p>
+    <p>Так как х – 3 = 20,5 – 3 = 17,5 (км/ч) - скорость второго.</p>
+    <p>Ответ: 20,5 км/ч; 17,5 км/ч.</p>
+    <p class="center"><i>Решите самостоятельно</i></p>
+    <div>
+      <p>1. Рыбак может проплыть по течению реки на лодке за 3 ч такое же расстояние, как за 3 ч 40 мин против течения. Найдите скорость течения реки, если скорость лодки в стоячей воде равна 5 км/ч.</p>
+      <p>Ответ: 0,5 км/ч.</p>
+      <p>2. От пристани против течения реки отправилась моторная лодка, собственная скорость которой 10км/ч. Через 45мин после выхода лодки испортился мотор, и лодку течением реки через 3ч принесло обратно к пристани. Какова скорость течения реки?</p>
+      <p>Ответ: 2км/ч.</p>
+      <p>3. За 4ч катер проходит по течению расстояние, в 2,4 раза большее, чем за 2ч против течения. Какова скорость катера в стоячей воде, если скорость течения 1,5км/ч?</p>
+      <p>Ответ: 16,5 км/ч.</p>
+      <p>4. За 6ч катер проходит по течению на 20км меньше, чем за 10ч против течения. Какова скорость течения, если скорость катера в стоячей воде 15км/ч?</p>
+      <p>Oтвeт: 2,5км/ч.</p>
+      <p>5. Почтальон расстояние от почты до совхоза проехал на мотоцикле со скоростью 30 км/ч. Назад он возвращался пешком со скоростью, составляющей 20% скорости его движения на мотоцикле. Поэтому на обратный путь почтальон затратил на 1ч 12мин больше времени, чем на путь от почты до совхоза. Найдите расстояние от почты до совхоза.</p>
+      <p>Ответ: 9км.</p>
+      <p>6. Лыжная трасса состоит из подъема и спуска, причем подъем на 8км короче спуска. Лыжник, двигаясь на спуске со скоростью 18 км/ч, а на подъеме со скоростью 8 км/ч, затратил на подъем на 15мин больше, чем на спуск. Найдите длину каждого из участков трассы.</p>
+      <p>Ответ: 10км; 18км.</p>
+      <p>7. Из А в В со скоростью 66 км/ч отправился товарный поезд, а спустя 20 мин через В в направлении А прошел скорый поезд, двигавшийся со скоростью 90км/ч. Через сколько времени после выхода из А товарный поезд встретится со скорым, если между станциями А и В 256км?</p>
+      <p>Ответ: 1ч 50мин.</p>
+      <p>8. Из А в В со скоростью 3,6 км/ч вышел пешеход. Через 1ч 15мин навстречу ему из В со скоростью 4,8км/ч вышел другой пешеход. В А и В пешеходы прибыли одновременно. Найдите расстояние между А и В.</p>
+      <p>Ответ: 18км.</p>
+      <p>9. Из М в N со скоростью 60 км/ч отправился товарный поезд, а
+10мин спустя вслед за ним по соседнему пути прошел пассажирский поезд, скорость которого была 85км/ч. Через сколько минут пассажирский поезд догонит товарный?</p>
+      <p>Ответ: 34 мин.</p>
+      <p>10. Из В в С со скоростью 15 км/ч выехал велосипедист, а через 16мин вслед за ним выехал другой велосипедист, скорость которого была 18км/ч. Оба велосипедиста прибыли в С одновременно, сколько километров между В и С?</p>
+      <p>Ответ: 24км.</p>
+    </div>
+    <h4 class = "center">§3 Задачи «на проценты и смеси»</h4>
   </main>
-  <p><span class="formula">$$$$</span>;</p>
+    <p><span class="formula">$$$$</span>;</p>
     <h4 class="inline"></h4> 
     <p class="inline"></p>
   <footer>
