--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <p><a href="theme1.html">Глава I. Числа и вычисления</a></p>
       <p><a href="theme2.html">Глава II. Степень и ее свойства</a></p>
       <p><a href="theme3.html">Глава III. Степень и ее свойства</a></p>
+      <p><a href="theme4.html">Глава IV. Текстовые задачи</a></p>
       <p>И так далее</p>
     </div>
     <div>
