--- a/theme4.html
+++ b/theme4.html
@@ -129,7 +129,7 @@
     <p class="inline">Велосипедист ехал из М в N по шоссе со скоростью 16км/ч, а возвращался по проселочной дороге, которая была на 6км длиннее, со скоростью 12 км/ч. Сколько километров проехал велосипедист по шоссе и сколько по проселочной дороге, если на весь путь он затратил 4ч?</p>
     <p><i>Решение:</i></p>
     <p>Пусть х(км) проехал велосипедист по шоссе и х+6(км) – по проселочной дороге. Тогда<span class="formula">$$t_1=\frac{x}{16} \ ч$$</span>– время, за которое велосипедист проезжает по шоссе;<span class="formula">$$t_2=\frac{x+6}{12} \text { ч }$$</span>– время, за которое велосипедист проезжает проселочную дорогу.</p>
-    <p><span class="formula">$$t_1+t_2=4$$</span>.</p>
+    <p>По условию<span class="formula">$$t_1+t_2=4$$</span>.</p>
     <p>Составим и решим уравнение:</p>
     <p>По условию<span class="formula">$$\begin{aligned}
 & \frac{x}{16}+\frac{x+6}{12}=4 \\
@@ -176,6 +176,40 @@
       <p>Ответ: 24км.</p>
     </div>
     <h4 class = "center">§3 Задачи «на проценты и смеси»</h4>
+    <p>Приведем некоторые указания к решению задач на растворы.</p>
+    <h4>1. Основными компонентами этого типа задач являются:</h4>
+    <p>а) процентное содержание растворенного вещества в растворе
+(это отношение массы этого вещества к массе раствора);</p>
+    <p>б) масса растворенного вещества в растворе;</p>
+    <p>в) масса раствора.</p>
+    <h4>2. Предполагают, что:</h4>
+    <p>а) все получившиеся смеси и сплавы являются однородными;</p>
+    <p>б) смешивание различных растворов происходит мгновенно;</p>
+    <p>в) объем смеси равен сумме объемов смешиваемых растворов;</p>
+    <p>г) объемы растворов и массы сплавов не могут быть отрицательными.</p>
+    <p class="center"><i>Задачи с решением.</i></p>
+    <h4 class="inline">Пример 1.</h4> 
+    <p class="inline">В 100г 20%-ного раствора соли добавили 300г её 10%ного раствора. Определите процентную концентрацию раствора.</p>
+    <p><i>Решение:</i></p>
+    <h4>1) путем последовательных вычислений.</h4>
+    <p>1.Сколько растворенного вещества содержится:</p>
+    <p>а) в 100г 20%-ного раствора;</p>
+    <p>б) в 300г 10%-ного раствора?</p>
+    <p>а) 100∙0,2 = 20(г), б) 300∙0,1 = 30(г).</p>
+    <p>2. Сколько вещества содержится в образовавшемся растворе?</p>
+    <p>20г + 30г = 50г</p>
+    <p>3. Чему равна масса образовавшегося раствора?</p>
+    <p>100г + 300г = 400г</p>
+    <p>4. Какова процентная концентрация полученного раствора?</p>
+    <p><span class="formula">$$\frac{50}{400} \cdot 100=12,5(\%)$$</span>;</p>
+    <p>Ответ: 12,5%</p>
+    <h4>2) алгебраический.</h4>
+    <p>Пусть х – процентная концентрация полученного раствора. В первом растворе содержится 0,2∙100(г) соли, а во втором 0,1∙300(г), а в полученном растворе х∙(100 + 300)(г) соли. Составим уравнение:</p>
+    <p><span class="formula">$$0,2 \cdot 100+0,1 \cdot 300=x \cdot(100+300)$$</span>;</p>
+    <p><span class="formula">$$x=0,125(12,5 \%)$$</span>;</p>
+    <p><span class="formula">$$\text { Ответ: } 12,5 \%$$</span>;</p>
+    <h4 class="inline"></h4> 
+    <p class="inline"></p>
   </main>
     <p><span class="formula">$$$$</span>;</p>
     <h4 class="inline"></h4> 
