--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
   <div class="left">
     <h1 class="center">Электронная версия методического пособия по математике для абитуриентов</h1>
-    <p class="text_1"> Здесь сделать описание, информацию и т.д. Я здесь напишу очень много, потому что мне нужно проверить как всё это дело работает с абзацами в большом тексте. Содержание:</p>
+    <p class="text_1">Содержание:</p>
     <div class="list">
       <p><a href="theme1.html">Глава I. Числа и вычисления</a></p>
       <p><a href="theme2.html">Глава II. Степень и ее свойства</a></p>
       <p><a href="theme3.html">Глава III. Степень и ее свойства</a></p>
       <p><a href="theme4.html">Глава IV. Текстовые задачи</a></p>
-      <p>И так далее</p>
+      <p></p>
     </div>
     <div>
       <h2>Красиво</h2>
