--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
       <p><a href="theme2.html">Глава II. Степень и ее свойства</a></p>
       <p><a href="theme3.html">Глава III. Степень и ее свойства</a></p>
       <p><a href="theme4.html">Глава IV. Текстовые задачи</a></p>
-      <p></p>
+      <p><a href="theme5.html">Глава V. Одночлены и многочлены</a></p>
+      <p><a href="theme6.html">Глава VI. Формулы сокращённого умножения</a></p>
+      <p><a href="theme7.html">Глава VII. Линейная функция и её график</a></p>
+      <p><a href="theme8.html">Глава VIII. Геометрия</a></p>
+      <p><a href="theme9.html">Проверь себя</a></p>
+      <p><a href="theme10.html">Вариант 1</a></p>
+      <p><a href="theme11.html"></a>Вариант 2</p>
+      <p><a href="theme12.html">Примерная конкурсная работа по математике</a></p>
     </div>
   </div>
 </body>
-
 </html>
