--- a/theme4.html
+++ b/theme4.html
@@ -207,13 +207,57 @@
     <p>Пусть х – процентная концентрация полученного раствора. В первом растворе содержится 0,2∙100(г) соли, а во втором 0,1∙300(г), а в полученном растворе х∙(100 + 300)(г) соли. Составим уравнение:</p>
     <p><span class="formula">$$0,2 \cdot 100+0,1 \cdot 300=x \cdot(100+300)$$</span>;</p>
     <p><span class="formula">$$x=0,125(12,5 \%)$$</span>;</p>
-    <p><span class="formula">$$\text { Ответ: } 12,5 \%$$</span>;</p>
-    <h4 class="inline"></h4> 
-    <p class="inline"></p>
+    <p><span class="formula">$$\text { Ответ: } 12,5 \%$$</span></p>
+    <h4 class="inline">Пример 2.</h4> 
+    <p class="inline">Смешали 10%-ный и 25%-ный растворы соли и получили 3кг 20%-ного раствора. Какое количество каждого раствора в килограммах было использовано?</p>
+    <p><i>Решение:</i></p>
+    <p>Пусть х кг - масса 1-го раствора, тогда (3-х)кг –масса 2-го раствора. (0,1∙х)кг содержится соли в 1-ом растворе, 0,25∙(3-х)кг содержится соли в 2-ом растворе, 0,2∙3 кг содержится соли в смеси.</p>
+    <p>Учитывая, что масса соли в 1-ом и 2-ом растворах равна массе соли в смеси, составим и решим уравнение:</p>
+    <p><span class="formula">$$
+\begin{aligned}
+& 0,1 \cdot x+0,25 \cdot(3-\mathrm{x})=0,2 \cdot 3 \\
+& 0,15 \mathrm{x}=0,15 \\
+& \mathrm{x}=1,1 \text { кг-масса } 1 \text {-го раствора } \\
+& 3-\mathrm{x}=3-1=2(кг)-\text { масса } 2 \text {-го раствора. }
+\end{aligned}
+$$
+Ответ: 1 кг, 2 кг.</span></p>
+    <h4 class="inline">Пример 3.</h4> 
+    <p class="inline">Собрали 100 кг грибов. Оказалось, что их влажность 99%. Когда грибы подсушили, влажность снизилась до 98%. Какой стала масса этих грибов после подсушивания?</p>
+    <p><i>Решение:</i></p>
+    <p>В 100 кг грибов содержится, по условию, 99 кг воды и 1 кг «сухого вещества». Когда грибы подсушили, то «сухое вещество» стало составлять 2%. Но если 2% составляют 1 кг, то вся масса грибов равна 50 кг.</p>
+    <p>Ответ: 50кг.</p>
+    <h4 class="inline">Пример 4.</h4> 
+    <p class="inline">Товар стоил тысячу рублей. Продавец поднял цену на 10%, а через месяц снизил её на 10%. Сколько стал стоить товар?</p>
+    <p><i>Решение:</i></p>
+    <p>После подорожания товар стоил 1100 рублей. При снижении цены 1100 руб. – 100%, 110 рублей – 10% стоимости товара, следовательно, товар стал стоить 1100 - 110 =990 рублей.</p>
+    <p>Ответ: 990 рублей.</p>
+    <p class = "center"><i>Решите самостоятельно</i></p>
+    <div>
+      <p>1. Сколько сахара и воды надо взять для приготовления 250г 2,5%-ного раствора?</p>
+      <p>Ответ: 6,25г сахара, 243,75г воды</p>
+      <p>2. Какова процентная концентрация раствора, полученного в результате растворения 80г сахара в 160г воды?</p>
+      <p>Ответ: 33,3%</p>
+      <p>3. Смешали 84г 5% - го раствора соли и 36г 15% - го раствора. Сколько процентов соли содержится в получившейся смеси?</p>
+      <p>Ответ: 8%</p>
+      <p>4. Сплавили два слитка. Первый весил 105г и содержал 40% меди, второй весил 75г и содержал 64% меди. Какой процент меди содержится в получившемся сплаве?</p>
+      <p>Ответ: 50%</p>
+      <p>5. В одном украинском городе все жители говорят на русском или на украинском языках. По-украински говорят 85% всех жителей, а по-русски – 75%. Сколько процентов жителей этого города говорят на обоих языках?</p>
+      <p>Ответ: 60%</p>
+      <p>6. Представьте число 172 в виде разности двух чисел, меньшее из которых составляет 80% от большего.</p>
+      <p>Ответ: 172=860-688</p>
+      <p>7. Некоторый товар сначала подорожал на 10%, а потом подешевел на 10%. На сколько процентов изменилась цена этого товара?</p>
+      <p>Ответ: подешевел на 1%</p>
+      <p>8. Имеются два куска сплава олова и свинца. Первый, массой 300г, содержит 60% олова. Второй содержит 40% олова. Сколько граммов от второго куска надо добавить к первому, чтобы получить сплав с содержанием олова 56%?</p>
+      <p>Ответ: 75г.</p>
+      <p>9. Кусок сплава меди и цинка массой 36кг содержит 45% меди. Сколько килограммов меди нужно добавить к этому куску, чтобы новый сплав содержал 60% меди?</p>
+      <p>Ответ: 13,5кг</p>
+      <p>10. Первое число составляет 80% от третьего, а второе – 30% от третьего числа. Найдите эти числа, если их среднее арифметическое равно 21,21.</p>
+      <p>Ответ: 24,24; 9,09; 30,3.</p>
+      <p>11. Грибы при сушки теряют 80% своей массы. Сколько надо взять свежих грибов, чтобы получить 1 кг сушеных?</p>
+      <p>Ответ: 5кг.</p>
+    </div>
   </main>
-    <p><span class="formula">$$$$</span>;</p>
-    <h4 class="inline"></h4> 
-    <p class="inline"></p>
   <footer>
     <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
   </footer>
