--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p><a href="theme8.html">Глава VIII. Геометрия</a></p>
       <p><a href="theme9.html">Проверь себя</a></p>
       <p><a href="theme10.html">Вариант 1</a></p>
-      <p><a href="theme11.html"></a>Вариант 2</p>
+      <p><a href="theme11.html">Вариант 2</p>
       <p><a href="theme12.html">Примерная конкурсная работа по математике</a></p>
     </div>
   </div>
