--- a/theme5.html
+++ b/theme5.html
@@ -1,1 +1,98 @@
-
+<!DOCTYPE html>
+<html class="content">
+<head>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <title>Глава V</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1 class="center">Глава V. Одночлены и многочлены</h1>
+  </header>
+  <main>
+    <p>Выражения<span class="formula">$$5 a^2 x, 2 b^3(-3) b c^2,-3 a^7, x y^2$$</span>являются произведениями чисел и их степеней. Такие выражения называются одночленами. Одночленами считают также числа, переменные и их степени.</p>
+    <p>Например, выражения<span class="formula">$$-7,2^3, x, x^4$$</span>– одночлены.</p>
+    <p>Упростим одночлен<span class="formula">$$2 b^3(-3) b c^2$$</span>, воспользовавшись переместительным и сочетательными свойствами умножения:</p>
+    <p><span class="formula">$$2 b^3(-3) b c^2=2(-3) b^3 b c^2=-6 b^4 c^2$$</span></p>
+    <p>Мы представили одночлен<span class="formula">$$2 b^3(-3) b c^2$$</span>в виде произведения числового множителя, стоящего на первом месте, и степеней различных переменных. Такой вид одночлена называют стандартным видом. К одночленам стандартного вида относят такие одночлены, как<span class="formula">$$-5 , a, -a, $\mathrm{a}^3$$$</span>. К стандартному виду можно привести любой одночлен.</p>
+    <p>Числовой множитель одночлена, записанного в стандартном виде, называют коэффициентом одночлена.</p>
+    <p>Например, коэффициент одночлена<span class="formula">$$-6 b^4 c^2$$</span>равен -6.Коэффициенты одночленов<span class="formula">$$a^2 \text { и -ab }$$</span>равны соответственно 1 и -1, так как<span class="formula">$$\mathrm{a}^2=1^* \mathrm{a}^2 и -ab =-1 * a b$$</span></p>
+    <p>Степенью одночлена называют сумму показателей степеней всех всходящих в него переменных. Если одночлен не содержит переменных и является числом, отличным от нуля, то степень этого одночлены считают равной нулю.</p>
+    <p>При умножении одночленов и возведении одночлена в степень используется правило умножения степеней с одинаковыми основаниями и правило возведения степени в степень. При этом получается одночлен, который обычно представляют в стандартном виде.</p>
+    <p>Многочленом называют сумму одночленов.</p>
+    <p>Если многочлен состоит из двух членов, его называют двучленом; если из трёх членов – трёхчленом. Одночлен считают многочленом, состоящим из одного числа.</p>
+    <p>Любой многочлен можно привести к стандартному виду. Для этого нужно каждый его член представить в стандартном виде и привести подобные члены.</p>
+    <p>Степенью многочлена стандартного вида называют наибольшую из степеней входящих в него одночленов. Степенью произвольного многочлена называют степень тождественно равного ем многочлена стандартного вида.</p>
+    <p>Если перед скобками ставится знак “плюс”, то члена, которые заключаются в скобки, записываются с теми же знаками; если перед скобками ставится знак “минус”, то знаки членов, заключаемых в скобки, меняют на противоположные.</p>
+    <p>Чтобы умножить одночлен на многочлен, нужно умножить этот одночлен на каждый член многочлена и полученные произведения сложить.</p>
+    <p>Произведения любых двух многочленов можно представить в виде многочлена.</p>
+    <p>Чтобы умножить многочлен на многочлен, нужно каждый член многочлены умножить на каждый член другого многочлена и полученный произведения сложить.</p>
+    <div>
+      ><h4 class="inline">Пример 1.</h4> 
+      <p class="inline">Упростите выражение<span class="formula">$$0,2 a^2 b^4 \cdot\left(-5 a^3 b\right)^2$$</span></p>
+    </div>
+    <div>
+      <h4 class="inline">Решение:</h4> 
+      <p class="inline"><span class="formula">$$\begin{gathered}
+0,2 a^2 b^4 \cdot\left(-5 a^3 b\right)^2=0,2 a^2 b^4 \cdot(-5)^2 \cdot\left(a^3\right)^2 b^2=0,2 a^2 b^4 \cdot 25 a^6 b^2=0,2 \cdot 25 a^2 a^6 b^4 b^2=5 a^8 b^6
+\end{gathered}$$</span></p>
+    </div>
+    <div>
+      <h4 class="inline">Пример 2.</h4> 
+      <p class="inline">Упростите выражение<span class="formula">$$3 b a b^2+a \cdot 5+a \cdot 2 b^3-a$$</span></p>
+    </div>
+    <div>
+      <h4 class="inline">Решение:</h4> 
+      <p class="inline"><span class="formula">$$3 b a b^2+a \cdot 5+a \cdot 2 b^3-a=3 a b^3+5 a+2 a b^3-a=5 a b^3+4 a$$</span></p>
+    </div>
+    <p class="center"><i>Решите самостоятельно</i></p>
+    <div>
+      <p>1. Приведите одночлен к стандартному виду:<span class="formula">$$9 a^4 a a^4$$</span></p>
+      <p>2. Приведите одночлен к стандартному виду:<span class="formula">$$3 x \cdot 0,4 y \cdot 6 z$$</span></p>
+      <p>3. Приведите одночлен к стандартному виду:<span class="formula">$$7 a \cdot(-9 a c)$$</span></p>
+      <p>4. Приведите одночлен к стандартному виду:<span class="formula">$$-3 \frac{1}{3} m^5 \cdot 9 m n^9$$</span></p>
+      <p>5. Приведите одночлен к стандартному виду:<span class="formula">$$-5 x^2 \cdot 0,1 x^2 y \cdot(-2 y)$$</span></p>
+      <p>6. Приведите одночлен к стандартному виду:<span class="formula">$$c \cdot(-d) \cdot c^{18}$$</span></p>
+      <p>7. Приведите многочлен к стандартному виду и найдите значение многочлена при указанных значениях переменных:<span class="formula">$$-3 \mathrm{a}^5+4 \mathrm{a}^3+7 \mathrm{a}^5-10 \mathrm{a}^3+12 \mathrm{a}, \text { если } \mathrm{a}=-2 ;$$</span></p>
+      <p>8. Приведите многочлен к стандартному виду и найдите значение многочлена при указанных значениях переменных:<span class="formula">$$x^3 y-3 x^2-4 x^3 y+8 x^2, \text { если } x=-1, y=-3$$</span></p>
+      <p>9. Приведите многочлен к стандартному виду и найдите значение многочлена при указанных значениях переменных:<span class="formula">$$0,8 x^2-0,3 x-x^2+1,6+1,1 x-0,6, \text { если } x=5$$</span></p>
+      <p>10. Приведите многочлен к стандартному виду и найдите значение многочлена при указанных значениях переменных:<span class="formula">$$\frac{1}{3} a^2 c+\frac{3}{4} a c^2+\frac{1}{6} a^2 c+1,25 a c^2 \text {, если } \mathrm{a}=-4, \mathrm{c}=3 \text {. }$$</span></p>
+    </div>
+    <h4 class="center">Ответы к главе V “Одночлены и многочлены”</h4>
+      <table class="my-table">
+        <tr>
+          <th>№</th>
+          <th>1</th>
+          <th>2</th>
+          <th>3</th>
+          <th>4</th>
+          <th>5</th>
+          <th>6</th>
+          <th>7</th>
+          <th>8</th>
+          <th>9</th>
+          <th>10</th>
+        </tr>
+        <tr>
+          <td>Ответ</td>
+          <td><span class="formula">$$9 \mathrm{a}^{11}$$</span></td>
+          <td><span class="formula">$$7,2 x y z$$</span></td>
+          <td><span class="formula">$$-63 a^2 c$$</span></td>
+          <td><span class="formula">$$-30 m^6 n^9$$</span></td>
+          <td><span class="formula">$$x^4 y^2$$</span></td>
+          <td><span class="formula">$$-\mathrm{c}^{19} \mathrm{~d}$$</span></td>
+          <td><span class="formula">$$-104$$</span></td>
+          <td><span class="formula">$$-54$$</span></td>
+          <td><span class="formula">$$0$$</span></td>
+          <td><span class="formula">$$-48$$</span></td>
+        </tr>
+      </table>   
+  </main>
+  <p><span class="formula">$$$$</span></p>
+    <h4 class="inline"></h4> 
+    <p class="inline"></p>
+  <footer>
+    <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
+  </footer>
+</body>
+</html>
