--- a/theme6.html
+++ b/theme6.html
@@ -1,1 +1,57 @@
-
+<!DOCTYPE html>
+<html class="content">
+<head>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <title>Глава VI</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1 class="center">Глава VI. Формулы сокращённого умножения.</h1>
+  </header>
+  <main>
+    <p>Формулы сокращённого умножения многочленов — часто встречающиеся случаи умножения многочленов. При помощи формул можно работать с числами значительно быстрее и проще.</p>
+    <p>Квадрат суммы двух выражений равен квадрату первого выражения плюс удвоенное произведение первого и второго выражения плюс квадрат второго выражения.</p>
+    <p><span class="formula">$$(a+b)^2=a^2+2 a b+b^2$$</span></p>
+    <p>Квадрат разности двух выражений равен квадрату первого выражения минус удвоенное произведение первого и второго выражения плюс квадрат второго выражения.</p>
+    <p><span class="formula">$$(a-b)^2=a^2-2 a b+b^2$$</span></p>
+    <p>Куб суммы двух выражений равен кубу первого выражения плюс утроенное произведение квадрата первого выражения и второго плюс утроенное произведение первого выражения и квадрата второго плюс куб второго выражения.</p>
+    <p><span class="formula">$$(a+b)^3=a^3+3 a^2 b+3 a b^2+b^3$$</span></p>
+    <p>Куб разности двух выражений равен кубу первого выражения минус утроенное произведение квадрата первого выражения и второго плюс утроенное произведение первого выражения и квадрата второго минус куб второго выражения.</p>
+    <p><span class="formula">$$(a-b)^3=a^3-3 a^2 b+3 a b^2-b^3$$</span></p>
+    <p class="center"><i>Решите самостоятельно</i></p>
+    <div>
+      <p>1. Преобразуйте в многочлен:<span class="formula">$$4(m-n)^2+4 m(m-n) ;$$</span></p>
+      <p>2. Преобразуйте в многочлен:<span class="formula">$$5 x(x-y)-2(y-x)^2$$</span></p>
+      <p>3. Преобразуйте в многочлен:<span class="formula">$$(y+7)^2-2(y+10)(y+4)$$</span></p>
+      <p>4. Упростите выражение:<span class="formula">$$(x-5)(6+4 x)-3(1-x)^2$$</span></p>
+      <p>5. Упростите выражение:<span class="formula">$$(3 m-a)(a+3 m)-(2 a+m)(3 a-m) ;$$</span></p>
+      <p>6. Упростите выражение:<span class="formula">$$(x-4 y)(x+3 y)+(x-3 y)(3 y+x)$$</span></p>
+    </div>
+    <h4 class="center">Ответы к главе VI “Формулы сокращённого умножения”</h4>
+      <table class="my-table">
+        <tr>
+          <th>№</th>
+          <th>1</th>
+          <th>2</th>
+          <th>3</th>
+          <th>4</th>
+          <th>5</th>
+          <th>6</th>
+        </tr>
+        <tr>
+          <td>Ответ</td>
+          <td><p><span class="formula">$$8 m^2-12 m n+4 n^2$$</span></p></td>
+          <td><p><span class="formula">$$3 x^2-x y-2 y^2$$</span></p></td>
+          <td><p><span class="formula">$$-y^2-14-31$$</span></p></td>
+          <td><p><span class="formula">$$x^2-8 x-33$$</span></p></td>
+          <td><p><span class="formula">$$10 m^2-a m-7 a^2$$</span></p></td>
+          <td><p><span class="formula">$$2 x^2-x y-21 y^2$$</span></p></td>
+        </tr>
+      </table>   
+  </main>
+  <footer>
+    <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
+  </footer>
+</body>
+</html>
