--- a/theme5.html
+++ b/theme5.html
@@ -14,7 +14,7 @@
     <p>Например, выражения<span class="formula">$$-7,2^3, x, x^4$$</span>– одночлены.</p>
     <p>Упростим одночлен<span class="formula">$$2 b^3(-3) b c^2$$</span>, воспользовавшись переместительным и сочетательными свойствами умножения:</p>
     <p><span class="formula">$$2 b^3(-3) b c^2=2(-3) b^3 b c^2=-6 b^4 c^2$$</span></p>
-    <p>Мы представили одночлен<span class="formula">$$2 b^3(-3) b c^2$$</span>в виде произведения числового множителя, стоящего на первом месте, и степеней различных переменных. Такой вид одночлена называют стандартным видом. К одночленам стандартного вида относят такие одночлены, как<span class="formula">$$-5 , a, -a, $\mathrm{a}^3$$$</span>. К стандартному виду можно привести любой одночлен.</p>
+    <p>Мы представили одночлен<span class="formula">$$2 b^3(-3) b c^2$$</span>в виде произведения числового множителя, стоящего на первом месте, и степеней различных переменных. Такой вид одночлена называют стандартным видом. К одночленам стандартного вида относят такие одночлены, как<span class="formula">$$-5 , a, -a, \mathrm{a}^3$$</span>. К стандартному виду можно привести любой одночлен.</p>
     <p>Числовой множитель одночлена, записанного в стандартном виде, называют коэффициентом одночлена.</p>
     <p>Например, коэффициент одночлена<span class="formula">$$-6 b^4 c^2$$</span>равен -6.Коэффициенты одночленов<span class="formula">$$a^2 \text { и -ab }$$</span>равны соответственно 1 и -1, так как<span class="formula">$$\mathrm{a}^2=1^* \mathrm{a}^2 и -ab =-1 * a b$$</span></p>
     <p>Степенью одночлена называют сумму показателей степеней всех всходящих в него переменных. Если одночлен не содержит переменных и является числом, отличным от нуля, то степень этого одночлены считают равной нулю.</p>
