--- a/theme7.html
+++ b/theme7.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html class="content">
+<head>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"><script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <title>Глава VI</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1 class="center">Глава VI. Формулы сокращённого умножения.</h1>
+  </header>
+  <main>
+    <p>Графиком уравнения с двумя переменными называются множество всех точек координатной плоскости, координаты которых являются решениями этого уравнения</p>
+    <p>Графиком линейного уравнения с двумя переменными, в котором хотя бы один из коэффициентов при переменных не равен нулю, является прямая.</p>
+    <p>Линейной функцией называются функция вида y = kx + b, где k и b – заданные числа.</p>
+    <p>Можно показать, что графиком линейной функции является прямая. Так как прямая определяется двумя её точками, то для построения графика функции y = kx + b достаточно построить две точки этого графика.</p>
+    <p>Построить график y = 2x + 5:</p>
+    <p>При x = 0 значение функции y = 2x + 5 равно 5, т. е. точка (0; 5) принадлежит графику. Если x = 1, то y = 2*1 + 5 = 7, т. е. точка (1; 7) также принадлежит графику. Построим точки (0; 5) и (1; 7) и проведём через них прямую. Эта прямая и является графиком функции y = 2x + 5.</p>
+    <img src="график.png" alt="График">
+    <p>График функции y = kx + b получается сдвигом графика функции y = kx на b единиц вдоль оси ординат (Oy). Графиками функции y = kx и y = kx + b являются параллельные прямые.</p>
+    <p class="center"><i>Решите самостоятельно</i></p>
+    <div>
+      <p>1. Постройте график функции, заданной формулой:<span class="formula">$$y=-3 x+4$$</span>;</p>
+      <p>2. Постройте график функции, заданной формулой:<span class="formula">$$y=-x+3$$</span>;</p>
+      <p>3. Постройте график функции, заданной формулой:<span class="formula">$$y=x-2$$</span>;</p>
+      <p>4. Постройте график функции, заданной формулой:<span class="formula">$$y=0,3 x-5$$</span>;</p>
+    </div>
+    <p>Проверить свои построения вы можете на сайте <a href="https://www.desmos.com/calculator?lang=ru">Desmos</a></p>
+  </main>
+  <footer>
+    <p>© 2024 Методическое пособие | <a href="index.html">На главную</a></p>
+  </footer>
+</body>
+</html>
